bash/redis/k8s/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: redisbench
  name: redisbench
  namespace: redisdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redisbench
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redisbench
    spec:
      nodeSelector:
        workloads: apps
      containers:
      - image: surenmcode/redisbench:1.0.16
        imagePullPolicy: Always
        name: redisbench      
        command: ["/bin/sh"]
        args: ["-c", "while true; do ./init.sh; sleep 10; done"]
        resources: {}
      - image: surenmcode/redisbench:1.0.16
        imagePullPolicy: Always
        name: redislatency
        resources: {}
status: {}
