bash/redis/k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demopolicy
  namespace: redisdemo
spec:
  podSelector: {}
  policyTypes:
  - Ingress
